--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,16 +1,19 @@
-FROM python:3.11-slim
+FROM python:3.11-alpine AS builder
 
 WORKDIR /app
-
-RUN adduser --disabled-password --gecos '' appuser
-
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --user -r requirements.txt
 
+FROM python:3.11-alpine
+
+WORKDIR /app
+RUN adduser -D appuser
+
+COPY --from=builder /root/.local /home/appuser/.local
 COPY app.py .
 
 USER appuser
+ENV PATH=/home/appuser/.local/bin:$PATH
 
 EXPOSE 3000
-
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "3000"]
