fix: Convert ECS service to data source to prevent creation conflicts
- Use existing ECS service via data source instead of creating new one
- Fixes 'Creation of service was not idempotent' error
- Only task definition gets created/updated for deployments
- All existing infrastructure resources now properly referenced
- Tested locally and ready for GitHub Actions deployment

--- a/.github/workflows/destroy_infra.yml
+++ b/.github/workflows/destroy_infra.yml
@@ -52,7 +52,7 @@ jobs:
 
     - name: Verify ECR cleanup
       run: |
-        aws ecr describe-repositories --repository-names ${{ secrets.PROJECT_NAME }} || echo "✅ ECR repository cleaned up"
+        aws ecr describe-repositories --repository-names ${{ secrets.PROJECT_NAME }} || echo "ECR repository cleaned up"
 
     - name: Cleanup confirmation
       run: |
