feat: Complete infrastructure and deployment system overhaul
✅ INFRASTRUCTURE:
- Fixed all Terraform modules to create resources (no data sources)
- Resolved VPC limits and resource conflicts
- Clean ECR, ECS, Load Balancer, and IAM role creation
- Proper resource tagging and organization

✅ MAKEFILE:
- Separated deploy_infra (infrastructure only) and deploy_app (application only)
- Fixed Docker cleanup commands using prune instead of stop/rm
- Added proper error handling and status messages
- Optimized Alpine-based Docker image (73MB vs 175MB)

✅ SECURITY:
- All sensitive data properly excluded from git
- Updated .gitignore and .terraformignore
- GitHub OIDC authentication working
- No hardcoded credentials or account IDs

✅ TESTING:
- Infrastructure deployment: ✅ Working
- Application deployment: ✅ Working
- Docker image optimization: ✅ 58% size reduction
- Resource cleanup: ✅ Working
- All workflows validated: ✅ Ready

Ready for GitHub Actions deployment!

--- a/.github/workflows/destroy_infra.yml
+++ b/.github/workflows/destroy_infra.yml
@@ -56,5 +56,5 @@ jobs:
 
     - name: Cleanup confirmation
       run: |
-        echo "🗑️ Infrastructure destroyed successfully!"
-        echo "💰 AWS resources have been cleaned up to avoid charges"
+        echo "Infrastructure destroyed successfully!"
+        echo "AWS resources have been cleaned up to avoid charges"
