--- a/.github/workflows/create_infra.yml
+++ b/.github/workflows/create_infra.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.PROJECT_NAME }}-github-actions
+        role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/hello-api-github-actions
         aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Terraform Init
